--- a/styles/admin.css
+++ b/styles/admin.css
@@ -22,7 +22,6 @@ button[type="submit"] {
     font-weight: bold;
     background: lightblue;
     cursor: pointer;
-    margin-bottom: 60px;
 }
 
 .reset {
@@ -34,8 +33,20 @@ button[type="submit"] {
 }
 
 .edit_panel {
+    position: relative;
     text-align: center;
     padding: 0 30px;
+}
+
+.edit_panel .submit_place {
+    position: fixed;
+    width: 100%;
+    z-index: 2;
+    bottom: 0;
+    left: 50%;
+    padding: 20px 0;
+    transform: translateX(-50%);
+    background: rgba(129, 244, 255, 0.48);
 }
 
 @media screen and (max-width: 736px) {
